Fixed imgs in index.html

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <footer>
 
       <div class="box-one">
-        <img src="/images/logo.svg" alt="loopstudios logo" class="box-one__logo">
+        <img src="./images/logo.svg" alt="loopstudios logo" class="box-one__logo">
         <div class="box-one__links">
           <a href="#" class="box-one__links-link">careers</a>
           <a href="#" class="box-one__links-link">events</a>
@@ -133,10 +133,10 @@
 
       <div class="box-two">
         <div class="box-two__links">
-          <a href="#" class="box-two__links-link"><img src="/images/icon-facebook.svg" alt="facebook icon"></a>
-          <a href="#" class="box-two__links-link"><img src="/images/icon-twitter.svg" alt="twitter icon"></a>
-          <a href="#" class="box-two__links-link"><img src="/images/icon-pinterest.svg" alt="pinterest icon"></a>
-          <a href="#" class="box-two__links-link"><img src="/images/icon-instagram.svg" alt="instagram icon"></a>
+          <a href="#" class="box-two__links-link"><img src="./images/icon-facebook.svg" alt="facebook icon"></a>
+          <a href="#" class="box-two__links-link"><img src="./images/icon-twitter.svg" alt="twitter icon"></a>
+          <a href="#" class="box-two__links-link"><img src="./images/icon-pinterest.svg" alt="pinterest icon"></a>
+          <a href="#" class="box-two__links-link"><img src="./images/icon-instagram.svg" alt="instagram icon"></a>
         </div>
         <p class="box-two__text">© 2021 Loopstudios. All rights reserved.</p>
       </div>
