--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </footer>
   </div>
 
-  <script src="/js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
